Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBooleanNumber.quorum
boolean bool = cast(boolean, 7.5)
output bool