Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignObjectNumber.quorum
Object o = cast(Object, "7.5")